# aoede-Foy-

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.encrypted.conf  config.sample.toml  run.ps1  start-secure.sh  start.sh  todolist.md
.github/workflows/: build-binaries-for-release.yml  create-release.yml  lint.yml  publish-image.yml
examples/: reauth.rs
librespot-fix-broken-metadata/: CHANGELOG.md
librespot-fix-broken-metadata/core/src/: spclient.rs
librespot-fix-broken-metadata/playback/src/: config.rs
rust-dns-sd/: build.rs  readme.md
rust-dns-sd/dns-sd-patch/: Cargo.toml  build.rs
src/: main.rs
src/lib/: config.rs  player.rs  reauth.rs
