[package]
name = "aoede"
version = "0.10.3"
authors = ["Max Isom <hi@maxisom.me>","Foy Laou <s225002731@gmail.com>"]
edition = "2024"
description = "一個可以直接從 Spotify 串流的 Discord 音樂機器人"
license = "MIT"
keywords = ["discord", "spotify", "music", "bot"]
categories = ["multimedia::audio"]

[[bin]]
name = "reauth"
path = "src/lib/reauth.rs"

[dependencies]
librespot = {version = "0.7.1", default-features = false, features = ["with-dns-sd","native-tls",]}
songbird = { version = "0.5", features = ["serenity", "driver", "gateway", "rustls"] }
symphonia = { version = "0.5", features = ["all"] }
rustls = { version = "0.23", features = ["ring"] }
tracing-subscriber = "0.3"
tokio = { version = "1.48", features = ["full"] }
byteorder = "1.5"
serde = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
rubato = "0.16"
futures-util = "0.3"
lazy_static = "1.5.0"
poise = "0.6.1"
uuid = "1.18.1"

[dependencies.serenity]
version = "0.12"
features = ["client", "voice", "gateway", "rustls_backend","model"]

[profile.dev]
split-debuginfo = "unpacked"

[api]
DISCORD_USER_ID = "${DISCORD_USER_ID}"

#[patch.crates-io]
## 告訴 Cargo：當你需要 dns-sd (無論是 librespot 還是其他依賴需要的) 時，
## 請使用這個本地路徑下的版本來代替 crates.io 上的版本。
#dns-sd = { path = "/rust-dns-sd/dns-sd-patch" }
